examples/test/testpolicy16911.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16911
  namespace: namespace92
spec:
  podSelector:
    matchLabels:
      key29: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value30
          key23: value3
      podSelector:
        matchLabels:
          key40: value41
          key3: value49
